--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Página principal </title>
 </head>
 <body>
+    <header>
     <h1>eu amo meu namorado</h1>
+    <ul>
+        <li>Ecola</li>
+        <li>Estudante</li>
+    </ul>
+    </header>
+    
 </body>
 </html>
