--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <header>
     <h1>eu amo meu namorado</h1>
     <ul>
-        <li>Ecola</li>
-        <li>Estudante</li>
+        <li>MUITO</li>
+        <li>MUITÂO MESMOOOO</li>
+        </li>
     </ul>
     </header>
     
