--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>eu amo meu namorado</h1>
+    <img src="" alt="">
     <ul>
         <li>MUITO</li>
         <li>MUITÂO MESMOOOO</li>
