--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="alurastart logo.pmg" alt="logo da alura start ">
+    <img src="alura_logo.png" alt="logo da alura start ">
     <ul>
         <li>MUITO</li>
         <li>MUITÂO MESMOOOO</li>
