--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <header>
-    <img src="alura_logo.png" alt="logo da alura start ">
+    <img src="alura_logo.png" alt="logo da Alura">
     <ul>
-        <li>MUITO</li>
-        <li>MUITÂO MESMOOOO</li>
+        <li>Escola</li>
+        <li>Estudante</li>
         </li>
     </ul>
     </header>
