--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-      <img src="alura_logo.png" alt="logo da Alura">
+      <img class="cabecalho-imagem" src="alurastart logo.pog" alt="logo da alura">
       <ul>
         <li>Escola</li>
         <li>Estudante</li>
