--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <title>Página principal </title>
 </head>
 <body>
-  <header>
-      <img class="cabecalho-imagem" src="alurastart logo.pog" alt="logo da alura">
-      <ul>
-        <li>Escola</li>
-        <li>Estudante</li>
-        </li>
-      </ul>
-    </header>
-    
+  <header class="cabecalho">
+    <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">Escola</li>
+        <li class="cabecalho-lista-item">Estudante</li>
+    </ul>
+</header>
 </body>
 </html>
