--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <header class="cabecalho">
     <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
     <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">Escola</li>
-        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Cao Charmoso</li>
+        <li class="cabecalho-lista-item">Banho</li>
+        <li class="cabecalho-lista-item">Banho-Tosa</li>
+        <Li class="cabecalho-lista-item">Pet Shoop</Li>
+
     </ul>
 </header>
 </body>
