--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
 
     </ul>
 </header>
+<section class="PetShop">
+    <h2 class="PetShop-titulo">Sobre o PetShop</h2>
+    <p class="PetShop-texto-um">O PetShop tem intuito de dar o melhor atendimento da região</p>
+    <p class="PetShop-texto-dois">O melhor PetShop</p>
+</section>
 </body>
 </html>
