--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h2 class="PetShop-titulo">Sobre o PetShop</h2>
     <p class="PetShop-texto-um">O PetShop tem intuito de dar o melhor atendimento da região</p>
     <p class="PetShop-texto-dois">O melhor PetShop</p>
+    <img class="PetShop-imagem" src="formula-bro.png" alt="cachoro tomando banho.">
 </section>
 </body>
 </html>
