--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="cabecalho">
-    <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+    <img class="cabecalho-imagem" src="alurastart_logo.png" alt="logo da alura start">
     <ul class="cabecalho-lista">
         <li class="cabecalho-lista-item">Cao Charmoso</li>
         <li class="cabecalho-lista-item">Banho</li>
