--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
     </ul>
 </header>
 <section class="PetShop">
-    <h2 class="PetShop-titulo">Sobre o PetShop</h2>
-    <p class="PetShop-texto-um">O PetShop tem intuito de dar o melhor atendimento da região</p>
-    <p class="PetShop-texto-dois">O melhor PetShop</p>
+  <div class="PetShop-div-conteudo">
+     <h2 class="PetShop-titulo">Sobre o PetShop</h2>
+     <p class="PetShop-texto-um">O PetShop tem intuito de dar o melhor atendimento da região</p>
+     <p class="PetShop-texto-dois">O melhor PetShop</p>
+  </div>
     <img class="PetShop-imagem" src="formula-bro.png" alt="cachoro tomando banho.">
 </section>
+<footer>
+
+</footer>
 </body>
 </html>
